--- a/configs/usgsgaugekrig.yaml
+++ b/configs/usgsgaugekrig.yaml
@@ -1,9 +1,11 @@
 data:
-  metadata_file: "./data/usgs_site_info.csv"
-  data_dir: "/Users/jmframe/data/usgskrig/usgs_streamflow"
+  metadata_file: "/Users/jmframe/qkrig_usgs/data/usgs_site_info.csv"
+  data_dir: "/Users/jmframe/data/usgskrig"
+  site_list_file: "/Users/jmframe/qkrig_usgs/data/list_22_camels_basins_NoLeaf.txt"
 
 settings:
   date_format: "%Y %m %d"
+  add_random_sites: 0
 
 kriging:
   grid_size: 100
