--- a/configs/plot_config.yaml
+++ b/configs/plot_config.yaml
@@ -1,3 +1,7 @@
+save_plots: true
+show_plots: false
+plots_directory: "/media/volume/ml_ngen/usgskrig/plots"
+
 variogram:
   figure_size: [8, 5]
   color: "blue"
@@ -13,7 +17,9 @@ kriging_interpolation:
   figure_size: [8, 6]
   cmap: "coolwarm"
   levels: 15
-  colorbar_label: "Interpolated Streamflow (mm/day)"
+  colorbar_label: "Interpolated Surface Runoff (mm/day)"
+  max_value: 30
+  min_value: 0
   scatter:
     cmap: "coolwarm"
     s: 1
